# uHavit

./: README.md  pyproject.toml  습관생성-AI-Agent-요건정의-질문지.md
dev/: .eslintrc.json  .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.js
dev/src/: App.jsx  main.jsx
dev/src/constants/: index.js
dev/src/hooks/: useAIChat.js  useAuth.js  useCheckins.js  useHabits.js
dev/src/pages/: Chat.jsx  Chat.module.css  Dashboard.jsx  Dashboard.module.css  Habits.jsx  Habits.module.css  Settings.jsx  Settings.module.css  Stats.jsx  Stats.module.css
dev/src/pages/Auth/: Login.jsx  (+2 more)
dev/src/styles/: globals.css
dev/src/utils/: habitStats.js  habitSuggestions.js  motivationalMessages.js  patternAnalysis.js  predictionAnalysis.js  validation.js
dev/supabase/: schema.sql
dev/supabase/migrations/: add-chat-sessions.sql
docs/: 01-프로젝트-요건정의서.md  02-기능-명세서.md  03-기술-명세서.md  04-MVP-범위-정의서.md  05-프로젝트-구조-제안서.md  06-파이썬-추가-가이드.md  07-AI-Agent-개발자-학습-가이드.md  AI-Agent-개발자-소양-정리.md  GEMINI_SETUP.md  악가의-AI-Agent-학습-로드맵.md  프론트엔드-개발자-체크리스트.md
src/uhavit/: cli.py
uhavit/: package.json
uhavit/.storybook/: main.js
uhavit/src/: App.js  index.css  index.js
uhavit/src/components/: Button.js  Button.jsx  CheckBox.jsx  Input.jsx  List.jsx  TextArea.jsx  TextInput.js  Title.jsx  Toast.jsx  select.jsx
uhavit/src/conatiner/: FormContainer.jsx
uhavit/src/container/: Container.jsx  Footer.jsx  FormContainer.jsx  Header.jsx  Wrapper.jsx
uhavit/src/stories/: Button.stories.js  Checkbox.stories.js  Input.stories.js  List.stories.js  Select.stories.js  TextInput.stories.js
(+63 files in other folders)
